--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Scoreboard with Total</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
     body {
       background-color: #1b1b2f;
       font-family: 'Arial', sans-serif;
       color: white;
-      padding: 30px;
+      padding: 10px;
     }
     .scoreboard {
       background-color: #f8f3e7;
       color: black;
       border-radius: 15px;
       padding: 20px;
-      max-width: 900px;
       margin: auto;
     }
     table {
@@ -30,9 +28,8 @@
       padding: 8px;
       border: 1px solid #ccc;
     }
-    th {
-      background-color: #ddd;
-    }
+    th { background-color: #ddd; }
+
     input {
       width: 60px;
       text-align: center;
@@ -44,25 +41,37 @@
       width: 100px;
       text-align: center;
     }
-    .btn-next {
+
+    .btn-next, .btn-result, .btn-reset {
       display: block;
       margin: 20px auto 0;
-      width: 100px;
+      width: 170px;
     }
+
     .winner {
       margin-top: 20px;
       text-align: center;
       font-size: 1.2rem;
     }
 
-    .table-responsive {
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch; /* smooth scrolling on mobile */
-}
-
+    #fullscreenBtn {
+      position: fixed;
+      right: 20px;
+      top: 20px;
+      z-index: 9999;
+    }
   </style>
 </head>
+
 <body>
+
+<!-- <button id="fullscreenBtn" class="btn btn-warning">Full Screen</button> -->
+ <button id="fullscreenBtn" class="btn btn-warning" style="display:flex;align-items:center;gap:6px;">
+  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" viewBox="0 0 16 16">
+    <path d="M1 1h5v2H3v3H1V1zm9 0h5v5h-2V3h-3V1zm5 9v5h-5v-2h3v-3h2zM1 10h2v3h3v2H1v-5z"/>
+  </svg>
+</button>
+
 
 <div class="scoreboard">
   <div class="table-responsive">
@@ -70,25 +79,21 @@
       <thead>
         <tr>
           <th>CARD</th>
-          <th><input class="name-input" value="A" type="text"></th>
-          <th><input class="name-input" value="B" type="text"></th>
-          <th><input class="name-input" value="C" type="text"></th>
-          <th><input class="name-input" value="D" type="text"></th>
+          <th><input class="name-input" id="n1" value="A" type="text"></th>
+          <th><input class="name-input" id="n2" value="B" type="text"></th>
+          <th><input class="name-input" id="n3" value="C" type="text"></th>
+          <th><input class="name-input" id="n4" value="D" type="text"></th>
         </tr>
       </thead>
-      <tbody id="scoreBody">
-        <tr>
-          <td>L - ( 13 )</td>
-          <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-          <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-          <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-          <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-        </tr>
-      </tbody>
+
+      <tbody id="scoreBody"></tbody>
     </table>
   </div>
 
   <button class="btn btn-success btn-next" id="nextBtn">Next</button>
+  <button class="btn btn-primary btn-result d-none" id="resultBtn">Show Result</button>
+  <button class="btn btn-danger btn-reset d-none" id="resetBtn">Reset Game</button>
+
   <div id="winnerDiv" class="winner"></div>
 </div>
 
@@ -96,85 +101,184 @@
 <script>
   const scoreBody = document.getElementById('scoreBody');
   const nextBtn = document.getElementById('nextBtn');
+  const resultBtn = document.getElementById('resultBtn');
+  const resetBtn = document.getElementById('resetBtn');
   const winnerDiv = document.getElementById('winnerDiv');
 
   const cardSequence = ['L', 'I', 'C', 'K'];
   let currentRow = 1;
-  let currentNumber = 12;
+  let currentNumber = 13;
 
-  nextBtn.addEventListener('click', () => {
-    if(currentNumber >= 1){
-      const row = document.createElement('tr');
-      const cardLabel = cardSequence[currentRow % cardSequence.length];
-      row.innerHTML = `
-        <td>${cardLabel} - ( ${currentNumber} )</td>
-        <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-        <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-        <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-        <td><input type="number" inputmode="numeric" pattern="[0-9]*"></td>
-      `;
-      scoreBody.appendChild(row);
-      currentRow++;
-      currentNumber--;
-
-      if(currentNumber === 0){
-        addTotalRow();
-        nextBtn.disabled = true;
-      }
+  // FULL SCREEN
+  document.getElementById("fullscreenBtn").onclick = () => {
+    if (!document.fullscreenElement) {
+      document.documentElement.requestFullscreen();
+    } else {
+      document.exitFullscreen();
     }
-  });
+  };
 
-  function addTotalRow(){
-    const row = document.createElement('tr');
+  // ---------- SAVE DATA ----------
+  function saveData() {
+    const data = {
+      names: [
+        document.getElementById("n1").value,
+        document.getElementById("n2").value,
+        document.getElementById("n3").value,
+        document.getElementById("n4").value,
+      ],
+      rows: [],
+      currentRow,
+      currentNumber,
+      winnerHTML: winnerDiv.innerHTML    // ⭐ WINNER SAVE
+    };
+
+    document.querySelectorAll("#scoreBody tr").forEach(row => {
+      const card = row.children[0].innerText;
+      const values = Array.from(row.querySelectorAll("input")).map(i => i.value);
+      const locked = Array.from(row.querySelectorAll("input")).map(i => i.disabled);
+      data.rows.push({ card, values, locked });
+    });
+
+    localStorage.setItem("LICK_SCORE", JSON.stringify(data));
+  }
+
+
+  // ---------- LOAD DATA ----------
+  function loadData() {
+    const saved = JSON.parse(localStorage.getItem("LICK_SCORE"));
+    if (!saved) {
+      addRow("L", 13);
+      return;
+    }
+
+    document.getElementById("n1").value = saved.names[0];
+    document.getElementById("n2").value = saved.names[1];
+    document.getElementById("n3").value = saved.names[2];
+    document.getElementById("n4").value = saved.names[3];
+
+    currentRow = saved.currentRow;
+    currentNumber = saved.currentNumber;
+
+    saved.rows.forEach(r => {
+      const number = r.card.match(/\d+/)[0];
+      addRow(r.card.charAt(0), number, false);
+
+      const lastRow = scoreBody.lastElementChild;
+      const inputs = lastRow.querySelectorAll("input");
+
+      inputs.forEach((inp, i) => {
+        inp.value = r.values[i];
+        inp.disabled = r.locked[i];
+      });
+    });
+
+    // ⭐ Winner Restore
+    if (saved.winnerHTML && saved.winnerHTML !== "") {
+      winnerDiv.innerHTML = saved.winnerHTML;
+      nextBtn.classList.add("d-none");
+      resultBtn.classList.add("d-none");
+      resetBtn.classList.remove("d-none");
+    }
+  }
+
+
+  // ---------- ADD NEW ROW ----------
+  function addRow(card, number, autoSave = true) {
+    const row = document.createElement("tr");
     row.innerHTML = `
-      <td>Total</td>
-      <td class="total-cell">0</td>
-      <td class="total-cell">0</td>
-      <td class="total-cell">0</td>
-      <td class="total-cell">0</td>
+      <td>${card} - ( ${number} )</td>
+      <td><input type="number"></td>
+      <td><input type="number"></td>
+      <td><input type="number"></td>
+      <td><input type="number"></td>
     `;
+
     scoreBody.appendChild(row);
 
-    const inputs = scoreBody.querySelectorAll('input[type="number"]');
-    inputs.forEach(input => input.addEventListener('input', updateTotals));
-
-    updateTotals();
-  }
-
-  function updateTotals(){
-    const rows = Array.from(scoreBody.querySelectorAll('tr'));
-    const totals = [0,0,0,0];
-
-    rows.forEach(row => {
-      if(row.querySelector('td').textContent !== "Total"){
-        const cells = row.querySelectorAll('input[type="number"]');
-        cells.forEach((cell, idx) => {
-          totals[idx] += parseInt(cell.value) || 0;
-        });
-      }
+    row.querySelectorAll("input").forEach(inp => {
+      inp.addEventListener("input", () => {
+        if (inp.value < 0) inp.value = 0;
+        if (inp.value.length > 2) inp.value = inp.value.slice(0, 2);
+        saveData();
+      });
     });
 
-    const totalCells = scoreBody.querySelectorAll('tr td.total-cell');
-    totalCells.forEach((cell, idx) => {
-      cell.textContent = totals[idx];
-    });
-
-    showWinners(totals);
+    if (autoSave) saveData();
   }
 
-  function showWinners(totals){
-    const headerInputs = Array.from(document.querySelectorAll('th input.name-input'));
-    const players = headerInputs.map((input, idx) => ({name: input.value, score: totals[idx]}));
-    players.sort((a,b) => b.score - a.score);
 
-    let winnerText = "";
-    players.forEach((p, idx) => {
-      winnerText += `${idx+1}️⃣ ${p.name} (${p.score}) &nbsp;&nbsp;`;
+  // ---------- SHOW RESULT ----------
+  function showResult() {
+    let totals = [0, 0, 0, 0];
+
+    document.querySelectorAll("#scoreBody tr").forEach(row => {
+      const inputs = row.querySelectorAll("input");
+      inputs.forEach((inp, i) => {
+        totals[i] += Number(inp.value || 0);
+      });
     });
-    winnerDiv.innerHTML = winnerText;
+
+    let minScore = Math.min(...totals);
+    let winnerIndex = totals.indexOf(minScore);
+
+    let names = [
+      document.getElementById("n1").value,
+      document.getElementById("n2").value,
+      document.getElementById("n3").value,
+      document.getElementById("n4").value
+    ];
+
+    winnerDiv.innerHTML = `
+        <h3>🏆 Winner: ${names[winnerIndex]}</h3>
+        <p><b>${names[0]}:</b> ${totals[0]} | 
+        <b>${names[1]}:</b> ${totals[1]} | 
+        <b>${names[2]}:</b> ${totals[2]} | 
+        <b>${names[3]}:</b> ${totals[3]}</p>
+    `;
   }
+
+
+  // ---------- NEXT BUTTON ----------
+  nextBtn.addEventListener("click", () => {
+
+    const rows = scoreBody.querySelectorAll("tr");
+    if (rows.length > 0) {
+      rows[rows.length - 1].querySelectorAll("input").forEach(inp => inp.disabled = true);
+    }
+
+    currentNumber--;
+    addRow(cardSequence[currentRow % 4], currentNumber);
+
+    currentRow++;
+
+    if (currentNumber === 0) {
+      nextBtn.classList.add("d-none");
+      resultBtn.classList.remove("d-none");
+    }
+
+    saveData();
+  });
+
+
+  // ---------- RESULT BUTTON ----------
+  resultBtn.addEventListener("click", () => {
+    showResult();
+    resetBtn.classList.remove("d-none");
+    resultBtn.classList.add("d-none");
+    nextBtn.classList.add("d-none");
+    saveData();   // ⭐ Winner Now Saved
+  });
+
+  // ---------- RESET BUTTON ----------
+  resetBtn.addEventListener("click", () => {
+    localStorage.removeItem("LICK_SCORE");
+    location.reload();  
+  });
+
+  // LOAD ON PAGE OPEN
+  loadData();
 </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
