--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,17 +49,12 @@
       border-radius: 50%;
     }
 
-    #previewBtn, #pdfBtn {
+    #previewBtn {
       width: 170px;
       margin: 10px auto 0;
       display: none;
     }
   </style>
-
-  <!-- jsPDF + html2canvas -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
 </head>
 
 <body>
@@ -86,9 +82,10 @@
     </table>
   </div>
 
+
+  
   <button class="btn btn-success btn-next" id="nextBtn">Next</button>
   <button class="btn btn-primary btn-result d-none" id="resultBtn">Show Result</button>
-
   <button id="previewBtn" class="btn btn-info" style="display:flex;align-items:center;gap:6px;">
     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" viewBox="0 0 16 16">
       <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8z"/>
@@ -96,10 +93,6 @@
     </svg>
     Preview
   </button>
-
-  <!-- NEW PDF BUTTON -->
-  <button id="pdfBtn" class="btn btn-secondary">Download PDF</button>
-
   <button class="btn btn-danger btn-reset d-none" id="resetBtn">Reset Game</button>
 
   <div id="winnerDiv" class="winner"></div>
@@ -111,31 +104,40 @@
   const resultBtn = document.getElementById('resultBtn');
   const resetBtn = document.getElementById('resetBtn');
   const previewBtn = document.getElementById('previewBtn');
-  const pdfBtn = document.getElementById('pdfBtn');
   const winnerDiv = document.getElementById('winnerDiv');
 
-  const cardIcons = { L: "♥️", I: "♦️", C: "♣️", K: "♠️" };
+  const cardIcons = {
+    L: "♥️",
+    I: "♦️",
+    C: "♣️",
+    K: "♠️"
+};
+
   const cardSequence = ['L', 'I', 'C', 'K'];
   let currentRow = 1;
   let currentNumber = 13;
 
-  /* FULL SCREEN */
+  /*===============================
+        FULL SCREEN BUTTON
+  ===============================*/
   function openFullscreen() {
     const el = document.documentElement;
     if (el.requestFullscreen) el.requestFullscreen();
     else if (el.webkitRequestFullscreen) el.webkitRequestFullscreen();
     setTimeout(() => window.scrollTo(0, 1), 150);
   }
+
   function closeFullscreen() {
     if (document.exitFullscreen) document.exitFullscreen();
     else if (document.webkitExitFullscreen) document.webkitExitFullscreen();
   }
+
   document.getElementById("fullscreenBtn").onclick = () => {
     if (!document.fullscreenElement && !document.webkitFullscreenElement) openFullscreen();
     else closeFullscreen();
   };
 
-  /* SAVE */
+  /*========== SAVE DATA ==========*/
   function saveData() {
     const data = {
       names: [n1.value, n2.value, n3.value, n4.value],
@@ -155,10 +157,13 @@
     localStorage.setItem("LICK_SCORE", JSON.stringify(data));
   }
 
-  /* LOAD */
+  /*========== LOAD DATA ==========*/
   function loadData() {
     const saved = JSON.parse(localStorage.getItem("LICK_SCORE"));
-    if (!saved) { addRow("L", 13); return; }
+    if (!saved) {
+      addRow("L", 13);
+      return;
+    }
 
     [n1.value, n2.value, n3.value, n4.value] = saved.names;
 
@@ -180,17 +185,14 @@
 
     if (saved.winnerHTML) {
       winnerDiv.innerHTML = saved.winnerHTML;
-
       nextBtn.classList.add("d-none");
       resultBtn.classList.add("d-none");
-      resetBtn.classList.remove("d-none");
-
       previewBtn.style.display = "flex";
-      pdfBtn.style.display = "block";   /* LOAD PDF BUTTON */
+      resetBtn.classList.remove("d-none");
     }
   }
 
-  /* ADD ROW */
+  /*========== ADD ROW ==========*/
   function addRow(card, number, autoSave = true) {
     const row = document.createElement("tr");
     row.innerHTML = `
@@ -213,7 +215,7 @@
     if (autoSave) saveData();
   }
 
-  /* SHOW RESULT */
+  /*========== SHOW RESULT ==========*/
   function showResult() {
     let totals = [0, 0, 0, 0];
 
@@ -240,7 +242,7 @@
     `;
   }
 
-  /* NEXT BUTTON */
+  /*========== NEXT BUTTON ==========*/
   nextBtn.addEventListener("click", () => {
     const rows = scoreBody.querySelectorAll("tr");
     if (rows.length > 0) rows[rows.length - 1].querySelectorAll("input").forEach(i => i.disabled = true);
@@ -259,21 +261,17 @@
     saveData();
   });
 
-  /* RESULT BUTTON */
+  /*========== RESULT BUTTON ==========*/
   resultBtn.addEventListener("click", () => {
     showResult();
-
     previewBtn.style.display = "flex";
     resetBtn.classList.remove("d-none");
     resultBtn.classList.add("d-none");
     nextBtn.classList.add("d-none");
-
-    pdfBtn.style.display = "block";  /* SHOW PDF BUTTON */
-
     saveData();
   });
 
-  /* PREVIEW MODE */
+  /*========== PREVIEW MODE ==========*/
   let previewMode = false;
 
   function togglePreview() {
@@ -283,8 +281,13 @@
     if (previewMode) {
       allInputs.forEach(i => i.disabled = false);
 
-      previewBtn.innerHTML = `Exit Preview`;
-    }
+      previewBtn.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" viewBox="0 0 16 16">
+          <path d="M13.359 11.238l2.122 2.122-1.414 1.414-2.122-2.122a8 8 0 0 1-4.945 1.681C3 14.333 0 8.333 0 8.333S3 2.333 8 2.333c1.25 0 2.447.351 3.5.962l-1.384 1.384A6 6 0 0 0 8 4.333c-3.333 0-5.667 4-5.667 4s2.334 4 5.667 4a5.98 5.98 0 0 0 3.359-1.098z"/>
+        </svg>
+        Exit Preview
+      `;
+    } 
     else {
       const rows = scoreBody.querySelectorAll("tr");
       rows.forEach((row, index) => {
@@ -293,31 +296,19 @@
         else inputs.forEach(i => i.disabled = false);
       });
 
-      previewBtn.innerHTML = `Preview`;
+      previewBtn.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" viewBox="0 0 16 16">
+          <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8z"/>
+          <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+        </svg>
+        Preview
+      `;
     }
   }
 
   previewBtn.addEventListener("click", togglePreview);
 
-  /* PDF DOWNLOAD */
-  pdfBtn.addEventListener("click", async () => {
-    const { jsPDF } = window.jspdf;
-
-    const area = document.querySelector(".scoreboard");
-
-    const canvas = await html2canvas(area, { scale: 2 });
-    const imgData = canvas.toDataURL("image/png");
-
-    const pdf = new jsPDF("p", "mm", "a4");
-    const pageWidth = pdf.internal.pageSize.getWidth();
-    const imgWidth = pageWidth;
-    const imgHeight = (canvas.height * imgWidth) / canvas.width;
-
-    pdf.addImage(imgData, "PNG", 0, 0, imgWidth, imgHeight);
-    pdf.save("scoreboard.pdf");
-  });
-
-  /* RESET */
+  /*========== RESET BUTTON ==========*/
   resetBtn.addEventListener("click", () => {
     localStorage.removeItem("LICK_SCORE");
     location.reload();
@@ -328,4 +319,3 @@
 
 </body>
 </html>
-
